--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="/css/index.css">
     <title>Projeto Landing Page</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -33,6 +33,6 @@
 
         <button id="btn-entrar" class="lato-regular">Entrar</button>
     </header>
-    <script src="javascript/index.js"></script>
+    <script src="/javascript/index.js"></script>
 </body>
 </html>
